<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.briscacounter.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                style="@style/TeamStyle"
                android:text="@string/teamA"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/CounterStyle"
                android:text="@string/startCount"
                android:fontFamily="sans-serif-light" />

            <Button
                style="@style/UpperButton"
                android:text="@string/ace"
                android:onClick="aceTeamA"/>

            <Button
                style="@style/NormalButton"
                android:text="@string/three"
                android:onClick="threeTeamA"/>

            <Button
                style="@style/NormalButton"
                android:text="@string/king"
                android:onClick="kingTeamA"/>

            <Button
                style="@style/NormalButton"
                android:text="@string/horse"
                android:onClick="horseTeamA" />

            <Button
                style="@style/NormalButton"
                android:text="@string/jack"
                android:onClick="jackTeamA" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TeamStyle"
                android:text="@string/teamB"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_b_score"
                style="@style/CounterStyle"
                android:text="@string/startCount"
                android:fontFamily="sans-serif-light" />

            <Button
                style="@style/UpperButton"
                android:text="@string/ace"
                android:onClick="aceTeamB" />

            <Button
                style="@style/NormalButton"
                android:text="@string/three"
                android:onClick="threeTeamB" />

            <Button
                style="@style/NormalButton"
                android:text="@string/king"
                android:onClick="kingTeamB" />

            <Button
                style="@style/NormalButton"
                android:text="@string/horse"
                android:onClick="horseTeamB" />

            <Button
                style="@style/NormalButton"
                android:text="@string/jack"
                android:onClick="jackTeamB" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="resetScore"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp" />

</RelativeLayout>